blueprints/gke/hpc/bundle/app/app.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: video
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "api"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: video-download-api-service
      port:
        name: web
---
apiVersion: v1
kind: Service
metadata:
  name: video-download-api-service
  namespace: video
  annotations:
    annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"web":"HTTP"}'
    cloud.google.com/backend-config: '{"default": "backendconfig"}'
  labels:
    app: video-download-api-service
spec:
  ports:
  - name: web
    port: 5000
    protocol: TCP
  selector:
    app: video-download-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-download-api-deployment
  namespace: video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-download-api
  template:
    metadata:
      labels:
        app: video-download-api
    spec:
      serviceAccountName: video-download-api-service-account
      automountServiceAccountToken: true    
      containers:
      - name: video-download-api
        image: video-download-api-image
        ports:
        - containerPort: 5000
          name: web
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            memory: 10Mi
